--- a/jsf/src/main/resources/META-INF/resources/scss/_responsiveCommon.scss
+++ b/jsf/src/main/resources/META-INF/resources/scss/_responsiveCommon.scss
@@ -1568,7 +1568,7 @@ img.jeesl-icon, .jeesl-icon img, .pf-action-icon img, .ui-selectonemenu img {
 //}
 
 .ui-dialog-mask {
-	z-index: 1002 !important;
+	z-index: 1000 !important;
 }
 
 .ui-growl {
